--- a/src/Utilities/Localizable.strings
+++ b/src/Utilities/Localizable.strings
@@ -1,8 +1,9 @@
-"main_title" = "HAAPI UI SDK Demo App";
-"welcome_message" = "Welcome to the Demo App";
-"start_authentication" = "Start Authentication";
-"username" = "User Name";
-"access_token" = "Access Token";
-"refresh_token" = "Refresh Token";
-"refresh_access_token" = "Refresh Access Token";
-"sign_out" = "Sign Out";
+"main_title" = "Curity Demo App";
+"welcome_message" = "Welcome to the Curity iOS Hypermedia Authentication API (HAAPI) demo app.";
+"start_authentication" = "Start authentication";
+"authenticated_message" = "You're now authenticated";
+"username" = "User name";
+"access_token" = "Access token";
+"refresh_token" = "Refresh token";
+"refresh_access_token" = "Refresh token";
+"sign_out" = "Sign out";
